# estoca-chaos-api

./: .env.production.example  .gitignore  README.md  README.txt  docker-compose.yml  frontend.Dockerfile
backend/: .env.example  Dockerfile  README.md  cleanup_duplicates.py  list_endpoints.py  pyproject.toml  update_endpoint.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  74a88c6e8dea_add_created_by_id_to_groups.py  93eecd814e97_add_request_body_schema_to_endpoint_.py  create_endpoints_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/endpoints/: auth.py  endpoints.py  groups.py  mock.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  endpoint.py  group.py  header.py  url_parameter.py  user.py
backend/app/repositories/: endpoint.py
backend/app/schemas/: endpoint.py  group.py
backend/app/services/: auth.py  json_schema.py
backend/app/utils/: json_schema.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx-entrypoint.sh  nginx.Dockerfile  nginx.conf
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(authenticated)/: layout.tsx
frontend/src/hooks/: use-endpoint.ts  use-endpoints.ts  use-group.ts  use-groups.ts
frontend/src/lib/: axios.ts
frontend/src/services/: api.ts
frontend/src/types/: endpoint.ts  group.ts  next-auth.d.ts
(+28 files in other folders)
